The text on an active switch would stay white regardless of the brightness of the brightness of the accent colour. This has been fixed: now it will switch to black along with the rest of the buttons if the accent is colour too light. Also, the default accent colour has been changed to a light blue to be match with the logo of the application.

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ h1, label               { color: var(--themeText) !important; }
 .vs-table               { color: var(--themeText); }
 .vs-button              { color: var(--buttonText) !important; }
 .vs-dialog button       { color: var(--themeText) !important; }
+.vs-switch__text.on     { color: var(--buttonText) !important; }
 .title                  { color: var(--titleColour) !important; }
 
 /* Transition for router-link */
